--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -21,7 +21,37 @@ proxies:
       headers:
         host: usxm.inekokkk.top
   - &id002
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国
+    name: 🇳🇱_NL_荷兰->🇫🇷_FR_法国
+    type: vmess
+    server: 188.114.98.0
+    port: 2086
+    cipher: auto
+    uuid: 7d93e992-48cf-42d4-84f8-75768e815a4c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: admin.arzonhost.ir
+  - &id003
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
+    type: vmess
+    server: cdn.vds-server.ir
+    port: 8880
+    cipher: auto
+    uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: cdn.vds-server.ir
+  - &id004
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
     type: vmess
     server: 104.19.250.15
     port: 2052
@@ -35,40 +65,55 @@ proxies:
       path: /
       headers:
         host: helanv6cf.inekokkk.top
-  - &id003
-    name: 🇦🇪_AE_阿联酋->🇬🇧_GB_英国
-    type: vmess
-    server: 94.140.0.110
-    port: 8880
-    cipher: auto
-    uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: food.zhaal.ir
-  - &id004
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
-    type: vmess
-    server: 104.21.19.202
-    port: 8880
-    cipher: auto
-    uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: cdn.vds-server.ir
   - &id005
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国
+    type: vmess
+    server: mmus37.micloud.buzz
+    port: 46037
+    cipher: auto
+    uuid: 3bfbc47b-cb43-46ec-8036-ff83560a8b0e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /zh-cn
+      headers:
+        host: mmus37.micloud.buzz
+  - &id006
+    name: 🇨🇳_CN_中国->🇭🇺_HU_匈牙利
+    type: vmess
+    server: mmhu82.micloud.buzz
+    port: 46082
+    cipher: auto
+    uuid: 3bfbc47b-cb43-46ec-8036-ff83560a8b0e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /zh-cn
+      headers:
+        host: mmhu82.micloud.buzz
+  - &id007
+    name: 🇨🇳_CN_中国->🇩🇪_DE_德国
+    type: vmess
+    server: mmfi85.micloud.buzz
+    port: 46085
+    cipher: auto
+    uuid: 3bfbc47b-cb43-46ec-8036-ff83560a8b0e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /zh-cn
+      headers:
+        host: mmfi85.micloud.buzz
+  - &id008
     name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
     type: vmess
-    server: 172.67.223.242
+    server: 104.21.4.14
     port: 2086
     cipher: auto
     uuid: 7d93e992-48cf-42d4-84f8-75768e815a4c
@@ -80,7 +125,7 @@ proxies:
       path: /
       headers:
         host: admin.arzonhost.ir
-  - &id006
+  - &id009
     name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
     type: vmess
     server: admin.arzonhost.ir
@@ -95,8 +140,83 @@ proxies:
       path: /
       headers:
         host: admin.arzonhost.ir
-  - &id007
+  - &id010
+    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_1
+    type: vmess
+    server: c3.v2raybrasil.cloud
+    port: 2082
+    cipher: auto
+    uuid: 3d2944ae-a11c-46d8-9553-b9e83004d2dd
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /t.me/xraybr
+      headers:
+        host: s2.redbullplus.xyz
+  - &id011
+    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_2
+    type: vmess
+    server: p2.v2raybrasil.cloud
+    port: 2082
+    cipher: auto
+    uuid: 3d2944ae-a11c-46d8-9553-b9e83004d2dd
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /t.me/xraybr
+      headers:
+        host: s2.redbullplus.xyz
+  - &id012
+    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_3
+    type: vmess
+    server: c2.v2raybrasil.cloud
+    port: 2082
+    cipher: auto
+    uuid: 3d2944ae-a11c-46d8-9553-b9e83004d2dd
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /t.me/xraybr
+      headers:
+        host: s2.redbullplus.xyz
+  - &id013
+    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_4
+    type: vmess
+    server: p1.v2raybrasil.cloud
+    port: 2082
+    cipher: auto
+    uuid: 3d2944ae-a11c-46d8-9553-b9e83004d2dd
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /t.me/xraybr
+      headers:
+        host: s2.redbullplus.xyz
+  - &id014
     name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
+    type: vmess
+    server: 172.67.223.242
+    port: 2086
+    cipher: auto
+    uuid: e690ff9e-1676-4be3-d136-dcae586cb1e7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mizban.arzonhost.ir
+  - &id015
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_3
     type: vmess
     server: mizban.arzonhost.ir
     port: 2086
@@ -110,78 +230,8 @@ proxies:
       path: /
       headers:
         host: mizban.arzonhost.ir
-  - &id008
-    name: 🇺🇸_US_美国_2
-    type: trojan
-    server: 23.142.200.175
-    port: 443
-    udp: true
-    password: 27876_t7d7f4e3f
-    skip-cert-verify: true
-    network: tcp
-  - &id009
+  - &id016
     name: 🇺🇸_US_美国->🇹🇷_TR_土耳其_1
-    type: vmess
-    server: 104.21.82.39
-    port: 2095
-    cipher: auto
-    uuid: 7a737f41-b792-4260-94ff-3d864da67b80
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: tu.mahilu.site
-  - &id010
-    name: 🇬🇧_GB_英国
-    type: trojan
-    server: uk01.freeflyingcloud.xyz
-    port: 22252
-    udp: true
-    password: 89148410-25da-4dd9-8d32-247ca226e041
-    sni: uk01.freeflyingcloud.xyz
-    skip-cert-verify: true
-    network: tcp
-  - &id011
-    name: 🇺🇸_US_美国_3
-    type: ss
-    server: 34.220.228.24
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id012
-    name: 🇺🇸_US_美国_4
-    type: ss
-    server: 52.12.162.168
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id013
-    name: 🇺🇸_US_美国_5
-    type: ss
-    server: 35.93.23.124
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id014
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国_3
-    type: vmess
-    server: 104.21.4.14
-    port: 2086
-    cipher: auto
-    uuid: 7d93e992-48cf-42d4-84f8-75768e815a4c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: admin.arzonhost.ir
-  - &id015
-    name: 🇺🇸_US_美国->🇹🇷_TR_土耳其_2
     type: vmess
     server: tu.mahilu.site
     port: 2095
@@ -195,42 +245,33 @@ proxies:
       path: /
       headers:
         host: tu.mahilu.site
-  - &id016
-    name: 🇩🇪_DE_德意志联邦共和国_1
-    type: vmess
-    server: 23.158.56.60
-    port: 443
-    cipher: auto
-    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /linkvws
   - &id017
-    name: 🇩🇪_DE_德意志联邦共和国_2
+    name: 🇺🇸_US_美国->🇹🇷_TR_土耳其_2
     type: vmess
-    server: 23.158.56.50
-    port: 443
+    server: 104.21.82.39
+    port: 2095
     cipher: auto
-    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
+    uuid: 7a737f41-b792-4260-94ff-3d864da67b80
     alterId: 0
-    tls: true
+    tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /linkvws
+      path: /
+      headers:
+        host: tu.mahilu.site
   - &id018
-    name: 🇺🇸_US_美国_6
+    name: 🇫🇮_FI_芬兰
     type: trojan
-    server: it01.freeflyingcloud.xyz
-    port: 48102
+    server: 65.109.180.131
+    port: 443
     udp: true
-    password: ecc532e2-3f8b-4a30-b176-78951fda6542
-    sni: it01.freeflyingcloud.xyz
+    password: afa19815-faef-45c0-9297-4ae1d6991569
+    sni: maill.peymanribvar.xyz
     skip-cert-verify: true
-    network: tcp
+    network: grpc
+    grpc-opts:
+      grpc-service-name: kZWbU3k5jFb03dB5w
   - &id019
     name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
     type: vmess
@@ -247,146 +288,21 @@ proxies:
       headers:
         host: concentrations-taxi-about-recognised.trycloudflare.com
   - &id020
-    name: 🇺🇸_US_美国_7
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
     type: vmess
-    server: yh5.dtku41.xyz
-    port: 8080
+    server: 104.18.36.119
+    port: 2052
     cipher: auto
-    uuid: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a
+    uuid: aec82fa6-ab70-4d0a-e7fb-422ef729d961
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a-vm
+      path: /
       headers:
-        host: fantastic-doe-bids-ended.trycloudflare.com
+        host: helanv6cf.inekokkk.top
   - &id021
-    name: 🇺🇸_US_美国_8
-    type: ss
-    server: 38.75.137.105
-    port: 9101
-    password: e4FCWrgpkji3QY
-    cipher: aes-256-gcm
-  - &id022
-    name: 🇺🇸_US_美国_9
-    type: ss
-    server: 38.75.137.105
-    port: 7002
-    password: RexnBgU7EV5ADxG
-    cipher: aes-256-gcm
-  - &id023
-    name: 🇺🇸_US_美国_10
-    type: ss
-    server: 38.75.137.105
-    port: 8881
-    password: kDWvXYZoTBcGkC4
-    cipher: aes-256-gcm
-  - &id024
-    name: 🇺🇸_US_美国_11
-    type: ss
-    server: 35.91.54.169
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id025
-    name: 🇺🇸_US_美国_12
-    type: ss
-    server: 38.75.136.108
-    port: 3389
-    password: Y6R9pAtvxxzmGC
-    cipher: aes-256-gcm
-  - &id026
-    name: 🇺🇸_US_美国_13
-    type: ss
-    server: 38.75.136.108
-    port: 8091
-    password: PCnnH6SQSnfoS27
-    cipher: aes-256-gcm
-  - &id027
-    name: 🇺🇸_US_美国_14
-    type: ss
-    server: 38.75.136.108
-    port: 7306
-    password: FoOiGlkAA9yPEGP
-    cipher: aes-256-gcm
-  - &id028
-    name: 🇺🇸_US_美国_15
-    type: ss
-    server: 38.75.136.108
-    port: 7001
-    password: RexnBgU7EV5ADxG
-    cipher: aes-256-gcm
-  - &id029
-    name: 🇺🇸_US_美国_16
-    type: ss
-    server: 38.75.136.108
-    port: 2375
-    password: faBAoD54k87UJG7
-    cipher: aes-256-gcm
-  - &id030
-    name: 🇺🇸_US_美国_17
-    type: ss
-    server: 38.75.136.108
-    port: 9101
-    password: e4FCWrgpkji3QY
-    cipher: aes-256-gcm
-  - &id031
-    name: 🇺🇸_US_美国_18
-    type: trojan
-    server: us04.421421.xyz
-    port: 20230
-    udp: true
-    password: d971ee7a-32d9-402a-8a4f-d2135d48a47b
-    sni: 421421.xyz
-    skip-cert-verify: true
-    network: tcp
-  - &id032
-    name: 🇳🇱_NL_荷兰->🇫🇷_FR_法国
-    type: vmess
-    server: 188.114.98.0
-    port: 2086
-    cipher: auto
-    uuid: 7d93e992-48cf-42d4-84f8-75768e815a4c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: admin.arzonhost.ir
-  - &id033
-    name: 🇺🇸_US_美国_19
-    type: vmess
-    server: us219.netfilx.live
-    port: 80
-    cipher: auto
-    uuid: 1e65ec6d-9a42-4cd0-8c51-63030970134f
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: us219.netfilx.live
-  - &id034
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_3
-    type: vmess
-    server: cdn.vds-server.ir
-    port: 8880
-    cipher: auto
-    uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: cdn.vds-server.ir
-  - &id035
     name: 🇺🇸_US_美国->🇬🇧_GB_英国_4
     type: vmess
     server: 172.67.188.156
@@ -401,8 +317,8 @@ proxies:
       path: /
       headers:
         host: cdn.vds-server.ir
-  - &id036
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
+  - &id022
+    name: 🇺🇸_US_美国_2
     type: vmess
     server: yh7.dtku41.xyz
     port: 8080
@@ -416,10 +332,10 @@ proxies:
       path: 028c8131-9e3e-4836-94ac-ea7f24d4d05a-vm
       headers:
         host: booty-pensions-scheduling-blogging.trycloudflare.com
-  - &id037
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
+  - &id023
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
     type: vmess
-    server: 104.20.26.40
+    server: yh5.dtku41.xyz
     port: 8080
     cipher: auto
     uuid: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a
@@ -431,8 +347,85 @@ proxies:
       path: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a-vm
       headers:
         host: fantastic-doe-bids-ended.trycloudflare.com
-  - &id038
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_4
+  - &id024
+    name: 🇨🇦_CA_加拿大_1
+    type: vmess
+    server: 23.162.200.227
+    port: 443
+    cipher: auto
+    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /linkvws
+  - &id025
+    name: 🇨🇦_CA_加拿大_2
+    type: vmess
+    server: 158.51.123.111
+    port: 443
+    cipher: auto
+    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /linkvws
+  - &id026
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 45.63.61.239
+    port: 32575
+    cipher: auto
+    uuid: a29dab3d-a832-4b87-d4cf-2346925b45a9
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id027
+    name: 🇬🇧_GB_英国_1
+    type: trojan
+    server: uk01.freeflyingcloud.xyz
+    port: 22252
+    udp: true
+    password: 63db084a-e2ce-46db-9dd6-d4ed2c3d2663
+    sni: uk01.freeflyingcloud.xyz
+    skip-cert-verify: true
+    network: tcp
+  - &id028
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_5
+    type: vmess
+    server: 104.21.19.202
+    port: 8880
+    cipher: auto
+    uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: cdn.vds-server.ir
+  - &id029
+    name: 🇦🇪_AE_阿联酋->🇬🇧_GB_英国
+    type: vmess
+    server: 94.140.0.110
+    port: 8880
+    cipher: auto
+    uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: food.zhaal.ir
+  - &id030
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
     type: vmess
     server: yh4.dtku41.xyz
     port: 8080
@@ -446,6 +439,151 @@ proxies:
       path: 028c8131-9e3e-4836-94ac-ea7f24d4d05a-vm
       headers:
         host: booty-pensions-scheduling-blogging.trycloudflare.com
+  - &id031
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: cold-dawn-9246.fly.dev
+    port: 443
+    cipher: auto
+    uuid: ea4909ef-7ca6-4b46-bf2e-6c07896ef338
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /ea4909ef-7ca6-4b46-bf2e-6c07896ef338-vm
+  - &id032
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: 141.101.122.250
+    port: 8080
+    cipher: auto
+    uuid: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a-vm
+      headers:
+        host: fantastic-doe-bids-ended.trycloudflare.com
+  - &id033
+    name: 🇬🇮_GI_直布罗陀
+    type: trojan
+    server: 95.164.9.196
+    port: 2053
+    udp: true
+    password: 09191dbf-e7f7-4e7d-b405-c4785ea992bf
+    sni: ftp.debian.org
+    skip-cert-verify: true
+    network: tcp
+  - &id034
+    name: 🇫🇷_FR_法国_1
+    type: trojan
+    server: fr01.freeflyingcloud.xyz
+    port: 30502
+    udp: true
+    password: 0d5b3d65-e71e-4235-bf68-ea753ad87cc2
+    sni: fr01.freeflyingcloud.xyz
+    skip-cert-verify: true
+    network: tcp
+  - &id035
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_4
+    type: vmess
+    server: 23.162.168.211
+    port: 80
+    cipher: auto
+    uuid: bf67437e-6c90-45ca-abc2-c7240a5ce2aa
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /eisasqa
+  - &id036
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: vps789.com
+    port: 80
+    cipher: auto
+    uuid: 4b5c9371-0668-486a-9473-3699b842853c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /cctv13/hd.m3u8
+      headers:
+        host: mai.nekoneko.buzz
+  - &id037
+    name: 🇷🇺_RU_俄罗斯联邦
+    type: vmess
+    server: 45.144.3.204
+    port: 11846
+    cipher: auto
+    uuid: 299d5c3e-fc2c-4458-a2e4-3ee2bb053f80
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id038
+    name: 🇬🇧_GB_英国_2
+    type: trojan
+    server: 18.169.123.159
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trojan.burgerip.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id039
+    name: 🇫🇮_FI_芬兰->🇩🇪_DE_德国
+    type: vmess
+    server: 65.108.241.240
+    port: 34697
+    cipher: auto
+    uuid: 4dc8871c-337c-4804-8d61-15c6a0de9ffa
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id040
+    name: 🇺🇸_US_美国_7
+    type: trojan
+    server: 3.15.53.87
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    sni: trojan.burgerip.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id041
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_3
+    type: vmess
+    server: vmess.diskstation.eu
+    port: 2086
+    cipher: auto
+    uuid: 7d93e992-48cf-42d4-84f8-75768e815a4c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: admin.arzonhost.ir
+  - &id042
+    name: 🇫🇷_FR_法国_2
+    type: trojan
+    server: 13.37.30.19
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trojan.burgerip.co.uk
+    skip-cert-verify: true
+    network: tcp
 proxy-groups:
   - name: PROXY
     type: select
@@ -510,6 +648,10 @@ proxy-groups:
       - *id036
       - *id037
       - *id038
+      - *id039
+      - *id040
+      - *id041
+      - *id042
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -553,6 +695,10 @@ proxy-groups:
       - *id036
       - *id037
       - *id038
+      - *id039
+      - *id040
+      - *id041
+      - *id042
   - name: SELECT
     type: select
     proxies:
@@ -594,6 +740,10 @@ proxy-groups:
       - *id036
       - *id037
       - *id038
+      - *id039
+      - *id040
+      - *id041
+      - *id042
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
